# sandboxed-code-plugins

./: CONTRIBUTING.md  LICENSE  README.md
.claude-plugin/: marketplace.json
scc-config/: README.md
scc-config/.claude-plugin/: plugin.json
scc-config/commands/: edit.md  explain.md  init-org.md  init-project.md  init-team.md  init.md  validate.md
scc-config/hooks/: hooks.json
scc-config/scripts/: validate_config.py
scc-config/skills/scc-config-wizard/: SKILL.md
scc-safety-net/: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
scc-safety-net/.claude-plugin/: plugin.json
scc-safety-net/commands/: status.md
scc-safety-net/hooks/: hooks.json
scc-safety-net/scripts/: scc_safety_net.py
scc-safety-net/scripts/scc_safety_impl/: __init__.py  git_rules.py  hook.py  policy.py  redact.py
scc-safety-net/tests/: __init__.py  conftest.py  test_git_rules.py  test_hook.py  test_policy.py  test_redact.py  test_shell.py
scc-wizard/: README.md
scc-wizard/.claude-plugin/: plugin.json
scc-wizard/skills/explain/: SKILL.md
scc-wizard/skills/explain/supporting/: explain-cheatsheet.md
scc-wizard/skills/org/: SKILL.md
scc-wizard/skills/org/supporting/: dev-notes.md  org-presets.md  org-questions.md
scc-wizard/skills/org/supporting/examples/: centralized.json  federated.json  hybrid.json
scc-wizard/skills/team/: SKILL.md
scc-wizard/skills/team/supporting/: team-questions.md
scc-wizard/skills/team/supporting/examples/: team-config.json
scc-wizard/skills/validate/: SKILL.md
